meta-google: rework README to be non-markdown
Rework the README to not use markdown.

(From meta-google rev: e95ffa4345393be4ea00f05060f51f2a6af3833b)

Change-Id: Ie4b25a0af5817358ab48d184cc358bce262521a3
Signed-off-by: Patrick Venture <venture@google.com>
Signed-off-by: Andrew Geissler <geissonator@yahoo.com>

--- a/meta-google/README
+++ b/meta-google/README
@@ -48,13 +48,13 @@ other layers needed. e.g.:
 II.  Purpose
 ============
 
-Including this layer adds the following packages to your `obmc-phosphor-image`:
+Including this layer adds the following packages to your obmc-phosphor-image:
 
-* [google-ipmi-sys](https://github.com/openbmc/google-ipmi-sys): OEM IPMI Handler for providing specific information to the host.
-* [phosphor-ipmi-blobs](https://github.com/openbmc/phosphor-ipmi-blobs): OEM IPMI Blobs Handler for providing the framework for specific blob handlers.
-* [phosphor-ipmi-ethstats](https://github.com/openbmc/phosphor-ipmi-ethstats): OEM IPMI Handler for reporting ethernet device statistics from the BMCs ethernet devices.
-* [phosphor-ipmi-flash](https://github.com/openbmc/phosphor-ipmi-flash): OEM IPMI Handler for controlling in-band firmware updates.
+* google-ipmi-sys: OEM IPMI Handler for providing specific information to the host.
+* phosphor-ipmi-blobs: OEM IPMI Blobs Handler for providing the framework for specific blob handlers.
+* phosphor-ipmi-ethstats: OEM IPMI Handler for reporting ethernet device statistics from the BMCs ethernet devices.
+* phosphor-ipmi-flash: OEM IPMI Handler for controlling in-band firmware updates.
 
 III. Customizations
 
-Presently, this layer also enables the Google Iana for registering `phosphor-ipmi-ethstats` in addition to the OpenBMC one.
+Presently, this layer also enables the Google Iana for registering phosphor-ipmi-ethstats in addition to the OpenBMC one.
