meta-google: cleanup README
Further cleanup of the README, including a phrasing tweak.

(From meta-google rev: 98170ba7a8ab9be3c3dfd631c93c80d06516638c)

Change-Id: I5a0bb45e69742e7fad403102577cd54ade2d0599
Signed-off-by: Patrick Venture <venture@google.com>
Signed-off-by: Andrew Geissler <geissonator@yahoo.com>

--- a/meta-google/README
+++ b/meta-google/README
@@ -18,7 +18,7 @@ Please submit any patches against the meta-google layer to the OpenBMC gerrit ht
 
 Layer maintainer: Patrick Venture <venture@google.com>
 
-When sending patches, following [OpenBMC guidelines](https://github.com/openbmc/docs/blob/master/CONTRIBUTING.md).
+When sending patches, follow the OpenBMC guidelines.
 
 Table of Contents
 =================
